--- a/html/index.html
+++ b/html/index.html
@@ -9,31 +9,51 @@
   <body>
     <main>
       <header>
-        <span class="text"> EAI checker </span>
+        <div class="header_text">
+          <span class="text head"> EAI checker </span>
+        </div>
       </header>
       <section>
-        <form action="" method="post">
-          <div class="box">
-            <div class="email_text_box">
-              <span class="email_text">Email</span>
+        <div class="form_box">
+          <form action="" method="post">
+            <div class="box">
+              <div class="email_text_box">
+                <span class="text">Email</span>
+              </div>
+              <div class="textbox">
+                <input
+                  placeholder="Enter Your Email"
+                  type="email"
+                  name="email"
+                  id="email"
+                  class="text"
+                />
+              </div>
             </div>
-            <div class="textbox">
-              <input type="email" name="email" id="email" class="text" />
-            </div>
-          </div>
 
-          <div class="box">
-            <div class="submit_botton">
-              <input
-                type="submit"
-                value="submit"
-                name="submit"
-                class="botton"
-              />
+            <div class="box">
+              <div class="submit_botton">
+                <button type="submit" value="submit" class="botton">
+                  <span class="text btn">Submit</span>
+                </button>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </section>
+      <footer>
+        <div class="fotter_area">
+          <div class="footer_box">
+            <span class="footer_text">Techno Titans </span>
+          </div>
+          <div class="footer_box">
+            <span class="footer_text">9800000000 </span>
+          </div>
+          <div class="footer_box">
+            <span class="footer_text">techno@gmial.com </span>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
