--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <main>
       <header>
         <div class="header_text">
-          <span class="text head"> EAI checker </span>
+          <span class="text head">Techno Titans EAI checker </span>
         </div>
       </header>
       <section>
@@ -42,7 +42,7 @@
         </div>
       </section>
       <footer>
-        <div class="fotter_area">
+        <div class="footer_area">
           <div class="footer_box">
             <span class="footer_text">Techno Titans </span>
           </div>
